--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Interesting research question in this space include:
 
     <li><div class="row">
       <div class="col-sm-2 abbr">
-        <abbr class="badge">Under review ICML</abbr>
+        <abbr class="badge">Under Review ICML</abbr>
       </div>
       <div id="strongreject" class="col-sm-8">
           <div class="title">A StrongREJECT for Empty Jailbreaks</div>
