add link to Aligning paper

--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@ Interesting research question in this space include:
     
 
     <div class="links">
-    
       <a class="abstract btn btn-sm z-depth-0" role="button">Summary</a>
+      <a href="https://arxiv.org/abs/2302.12192" class="btn btn-sm z-depth-0" role="button" target="_blank">Paper</a>
     </div>
 
     <!-- Hidden abstract block -->
